--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
   - echo "Master was affected"
   when:
     branch: master
-    event: pull
+    event: push
     
 - name: dev-test
   image: alpine
@@ -23,3 +23,4 @@ steps:
   - echo "A tag was published!"
   when:
     event: tag
+ 
