--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
   - echo "Master was tagged and merged"
   when:
     branch: master
-    event: [push, tag]
+    event: tag
     tag: release*
     
 - name: dev-test
